# minimal_ros_packages

action_test/: CMakeLists.txt  package.xml
action_test/launch/: action_test_server.launch
action_test/scripts/: action_test_client  action_test_server
msg_minimal/scripts/: msg_test_node
rospy_minimal/src/rospy_minimal/: talker.py
smach_minimal/scripts/: traffic_lights.py
srv_minimal/scripts/: srv_test_python_server
srv_minimal/srv/: MinimalService.srv
